--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
   -webkit-transition: all 0.7s ease-in-out;
   stroke-dasharray: 240;
   stroke-dashoffset: 480;
-  stroke: #000;
+  stroke: #fff;
   transform: translateY(0);
 }
 
